all that small changes so far

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -46,5 +46,7 @@
     ],
     "editor.lineNumbers": "relative",
     "editor.renderControlCharacters": false,
+    "explorer.confirmDragAndDrop": false,
+    "C_Cpp.default.cppStandard": "c++17",
 }
 
